Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113263

wasm: error when switching cameras

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.2, 6.6.0
    • 6.5.0
    • Multimedia
    • None
    • WebAssembly
    • da90f2180 (dev), 07b992d3d (6.5)

    Description

      mera-test.wasm:0x46f0f Uncaught RuntimeError: table index is out of bounds
          at QWasmMediaCaptureSession::setCamera(QPlatformCamera*) (camera-test.wasm:0x46f0f)
          at QMediaCaptureSession::setCamera(QCamera*) (camera-test.wasm:0x106fa7)
          at MainWindow::on_camerasComboBox_textActivated(QString const&) (camera-test.wasm:0x1dd35)
          at MainWindow::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (camera-test.wasm:0x27676)
          at MainWindow::qt_metacall(QMetaObject::Call, int, void**) (camera-test.wasm:0x2795f)
          at QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) (camera-test.wasm:0x982e3d)
          at void doActivate<false>(QObject*, int, void**) (camera-test.wasm:0x9ace17)
          at QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (camera-test.wasm:0x9b3ad0)
          at QComboBoxPrivate::emitActivated(QModelIndex const&) (camera-test.wasm:0x2363ee)
          at QComboBoxPrivate::_q_itemSelected(QModelIndex const&) (camera-test.wasm:0x23b5b6)
      $

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes