wasm: fix switching cameras

Pick-to: 6.5
Fixes: QTBUG-113263
Change-Id: If2a740b4224e6f618896f23ce28dc2b02aa2d6d1
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>